# find_uz

./: .gitignore  Dockerfile  README.md  backup.json  db.sqlite3  main.py  pyproject.toml  requirements.txt  result.json  test.py
api/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_items_options_items_status.py  0003_address_remove_items_item_image_alter_items_category_and_more.py  0004_itemimages_item.py  0005_alter_user_username.py  0006_alter_itemimages_options.py  0007_items_time_lost_found_alter_items_date_lost_found.py  0008_items_brand_items_color.py  0009_message_messagefile_messageimage.py  0010_messagefile_created_at_messageimage_created_at.py  0011_alter_messagefile_file_alter_messagefile_message_and_more.py  0012_user_user_type_dictuser_finduzuser.py  0013_user_usernameee_alter_user_username.py  0014_remove_user_usernameee_alter_user_username.py  0015_user_created.py  0016_remove_user_created.py  0017_alter_user_user_type.py  0018_dictuser_is_admin_alter_dictuser_user.py  0019_rename_is_admin_dictuser_dics_admin.py  0020_rename_dics_admin_dictuser_dict_admin.py  0021_alter_dictuser_user.py  0022_alter_user_phone_number.py
authenticate/: authentications.py  ser.py  urls.py  views.py
core/: settings.py  urls.py
dictionary/: admin.py  models.py  permissions.py  serializers.py  throttles.py  urls.py  views.py
dictionary/migrations/: 0001_initial.py  0002_category_country_source_diplomaticterm_category_and_more.py  0003_alter_category_options_alter_country_options_and_more.py  0004_alter_diplomaticterm_related_countries_and_more.py  0005_alter_source_options_alter_source_url.py  0006_remove_diplomaticterm_photo_and_more.py  0007_remove_diplomatictermphoto_term_id_and_more.py  0008_diplomaticterm_updated_at_and_more.py  0009_category_created_at_category_updated_at_and_more.py  0010_contact_rename_category_diplomaticterm_categories.py  0011_alter_source_options_contact_user.py  0012_alter_diplomaticterm_categories_and_more.py  0013_alter_diplomaticterm_categories_and_more.py  0014_alter_diplomaticterm_categories_and_more.py  0015_alter_diplomaticterm_categories_and_more.py  0016_alter_diplomaticterm_categories_and_more.py  (+3 more)
manager/: admin.py  models.py  ser.py  urls.py  views.py
templates/: 404.html  about.html  categories.html  compare.html  index.html  style.css  term.html  terms.html  timeline.html
(+5 files in other folders)
