[project]
name = "find-uz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adrf==0.1.9",
    "asgiref==3.8.1",
    "async-property==0.2.2",
    "attrs==25.3.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "django==5.2.1",
    "django-cors-headers>=4.7.0",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt==5.5.0",
    "drf-spectacular==0.28.0",
    "h11==0.16.0",
    "idna==3.10",
    "inflection==0.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "ngrok==1.4.0",
    "packaging==25.0",
    "pillow==11.2.1",
    "pyjwt==2.9.0",
    "pytesseract==0.3.13",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rpds-py==0.25.1",
    "sqlparse==0.5.3",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "uv==0.7.15",
    "uvicorn==0.34.2",
    "whitenoise==6.9.0",
]
